kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: itpilot
  labels:
    name: itpilot
    environment: production
